--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build && vitest --ui",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -26,6 +28,9 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.2.1"
+    "@iconify-json/mdi": "^1.2.1",
+    "@vitest/ui": "^2.1.5",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.5"
   }
 }
