--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^4.16.16",
+    "astro": "5.1.1",
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.4",
+    "astro-loader-pocketbase": "^1.0.2",
     "astro-seo": "^0.8.4",
     "pocketbase": "^0.21.5",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.2.1"
+    "@iconify-json/fa-solid": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.1",
+    "@iconify-json/mynaui": "^1.2.8",
+    "@iconify-json/solar": "^1.2.1"
   }
 }
