--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build && vitest",
     "preview": "astro preview",
     "astro": "astro",
     "test": "vitest",
@@ -27,6 +27,9 @@
     "@iconify-json/fa-solid": "^1.2.0",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/mynaui": "^1.2.8",
-    "@iconify-json/solar": "^1.2.1"
+    "@iconify-json/solar": "^1.2.1",
+    "@types/jsdom": "^21.1.7",
+    "jsdom": "^26.0.0",
+    "vitest": "^3.0.1"
   }
 }
