--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "5.1.1",
+    "astro": "5.2.5",
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.4",
     "astro-loader-pocketbase": "^1.0.2",
     "astro-seo": "^0.8.4",
     "motion": "^11.18.0",
     "pocketbase": "^0.21.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@iconify-json/fa-solid": "^1.2.0",
@@ -29,6 +30,7 @@
     "@iconify-json/mynaui": "^1.2.8",
     "@iconify-json/solar": "^1.2.1",
     "@types/jsdom": "^21.1.7",
+    "@vitest/coverage-v8": "3.0.1",
     "jsdom": "^26.0.0",
     "vitest": "^3.0.1"
   }
