Refactor Contact Section Layout and Styles
- Changed the layout of the TwoColumnContact component from flexbox to grid for better responsiveness.
- Updated CSS styles to accommodate the new grid layout and ensure proper sizing of elements.
- Introduced a new ThreeImageCta component to enhance call-to-action sections with three images.
- Added corresponding styles for the ThreeImageCta component to ensure proper layout and responsiveness.
- Modified VerticalImageCta styles to adjust padding for better spacing.
- Enhanced Section component to conditionally render images and cards based on data availability.
- Updated styles for the Section component to improve layout and visual hierarchy.
- Integrated new ThreeImageCta component into the Sections component for better modularity.
- Adjusted TwoColumnStats component to inherit styles from the content_section__header class for consistency.
- Removed unused store.ts file to clean up the codebase.
- Improved SEO tests to validate meta tags, headings, and image attributes for better accessibility and performance.
- Updated pocketbase utility to include hero cover in data fetching.
- Introduced new props type definitions for better type safety in HeroProps.
- Made core_values optional in PageType to accommodate varying data structures.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build && vitest",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "test": "vitest",
@@ -19,10 +19,8 @@
     "astro-icon": "^1.1.4",
     "astro-loader-pocketbase": "^1.0.2",
     "astro-seo": "^0.8.4",
-    "motion": "^11.18.0",
     "pocketbase": "^0.21.5",
-    "typescript": "^5.7.2",
-    "zustand": "^5.0.3"
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@iconify-json/fa-solid": "^1.2.0",
