Refactor project structure and enhance gallery functionality
- Updated package.json scripts for better clarity and added test commands.
- Removed unnecessary padding from highlighted elements in global.css.
- Modified Cards component to use ShortGallery instead of Gallery.
- Added new Gallery component with lightbox functionality for image viewing.
- Created ShortGallery component for displaying grouped images with a "View More" feature.
- Enhanced IconCard styles for better visual consistency.
- Updated Overflow component to allow HTML content in titles and added a contact button.
- Improved PageNavigation component to manage sticky menu behavior based on hero style.
- Added new TwoLocation contact section for displaying information in two columns.
- Fixed minor styling issues across various components for better layout and responsiveness.
- Updated environment variables handling in pocketbase utility for better configuration management.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
+    "dev:start": "astro dev",
+    "dev:preview": "astro preview",
     "test": "vitest",
+    "build": "astro build",
+    "build:test": "astro build && astro test",
+    "astro": "astro",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
