--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "3.3.0",
+    "@unpic/astro": "^1.0.0",
     "astro": "5.5.3",
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.4",
@@ -24,10 +25,10 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@iconify-json/ri": "^1.2.5",
     "@iconify-json/fa-solid": "^1.2.0",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/mynaui": "^1.2.8",
+    "@iconify-json/ri": "^1.2.5",
     "@iconify-json/solar": "^1.2.1",
     "@types/jsdom": "^21.1.7",
     "@vitest/coverage-v8": "3.0.1",
