--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.4",
     "astro-loader-pocketbase": "^1.0.2",
+    "astro-purgecss": "^5.3.0",
     "astro-purgecss-static": "^1.0.5",
     "astro-seo": "^0.8.4",
     "pocketbase": "^0.21.5",
     "purgecss": "^7.0.2",
+    "sharp": "^0.34.3",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
