--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "astro": "5.11.1",
     "astro-favicons": "^3.1.5",
     "astro-font": "^0.1.81",
-    "astro-icon": "^1.1.4",
+    "astro-icon": "^1.1.5",
+    "astro-iconify": "^1.2.0",
+    "astro-lightgallery": "^2.0.0",
     "astro-loader-pocketbase": "^1.0.2",
     "astro-purgecss": "^5.3.0",
     "astro-purgecss-static": "^1.0.5",
     "astro-seo": "^0.8.4",
+    "lucide-astro": "^0.525.0",
     "pocketbase": "^0.21.5",
     "purgecss": "^7.0.2",
     "sharp": "^0.34.3",
