--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/sitemap": "^3.4.1",
     "@unpic/astro": "^1.0.0",
-    "astro": "5.5.3",
+    "astro": "^5.11.0",
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.4",
     "astro-loader-pocketbase": "^1.0.2",
